# protofish2-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
.github/workflows/: ci.yml  publish.yml
examples/: reconnecting_client.rs
examples/jitter_ogg/src/: main.rs
protofish2-core/: Cargo.toml
protofish2-core/src/: codec.rs
src/: compression.rs  config.rs  lib.rs
src/connection/: api.rs  mod.rs  reconnect.rs
src/datagram/: router.rs
src/mani/: codec.rs  frame.rs  message.rs  stream.rs
src/mani/transfer/: backpressure.rs  compression.rs  jitter.rs  mod.rs  recv.rs  send.rs
tests/: mani_transfer.rs
