[workspace]
members = ["examples/jitter_ogg"]

[package]
name = "protofish2"
version = "0.6.3"
edition = "2024"
authors = ["MincoMK <mail@drchi.co.kr>"]
description = "Non-blocking Stream Transportation"
license = "MIT"
repository = "https://github.com/zako-ac/protofish2-rs"

[features]
default = ["jitter"]
jitter = ["opus"]
opus = ["dep:opus"]

[dependencies]
bytes = "1.11.1"
dashmap = "6.1.0"
derive_more = { version = "2.1.1", features = ["from", "into", "from_str", "default", "display", "add"] }
flate2 = "1.1.9"
futures-util = { version = "0.3.32", features = ["sink"] }
lz4_flex = "0.13.0"
parking_lot = "0.12.5"
quinn = "0.11.9"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec", "io-util"] }
tracing = "0.1.44"
zstd = "0.13.3"
opus = { version = "0.3.1", optional = true }

[dev-dependencies]
rcgen = "0.14.7"
tracing-subscriber = "0.3.23"
